changed 1 .toList() to collect(Collectors.toList()) suggested by facilitator on Slack.